[package]
name = "trail"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
opentelemetry = { version = "0.24.0", features = ["trace"], default-features = false }

anyhow = { version = "1.0.86", features = ["std"], default-features = false, optional = true }
env_logger = { version = "0.11.5", features = ["auto-color", "humantime", "unstable-kv"], default-features = false, optional = true }
http = { version = "1.1.0", default-features = false, optional = true }
log = { version = "0.4.22", features = ["kv_std"], default-features = false, optional = true }
opentelemetry-appender-log = { version = "0.5.0", default-features = false, optional = true }
opentelemetry-appender-tracing = { version = "0.5.0", default-features = false, optional = true }
opentelemetry-otlp = { version = "0.17.0", features = ["grpc-tonic", "logs", "metrics", "trace"], default-features = false, optional = true }
opentelemetry-semantic-conventions = { version = "0.16.0", default-features = false, optional = true }
opentelemetry_sdk = { version = "0.24.1", features = ["rt-tokio", "trace"], default-features = false, optional = true }
sentry = { version = "0.34.0", features = ["panic", "reqwest", "rustls"], default-features = false, optional = true }
sentry-log = { version = "0.34.0", default-features = false, optional = true }
sentry-tracing = { version = "0.34.0", default-features = false, optional = true }
tonic = { version = "0.12.1", default-features = false, optional = true }
tower-layer = { version = "0.3.3", default-features = false, optional = true }
tower-service = { version = "0.3.3", default-features = false, optional = true }
tracing = { version = "0.1.40", default-features = false, optional = true }
tracing-subscriber = { version = "0.3.18", features = ["ansi", "env-filter", "fmt"], default-features = false, optional = true }

[features]

init = [
    "anyhow",
    "env_logger",
    "log",
    "opentelemetry-appender-log",
    "opentelemetry-appender-tracing",
    "opentelemetry-otlp",
    "opentelemetry-semantic-conventions",
    "opentelemetry_sdk",
    "sentry",
    "sentry-log",
    "sentry-tracing",
    "tracing",
    "tracing-subscriber"
]

grpc = [
    "http",
    "tonic",
    "tower-layer",
    "tower-service"
]
