[package]
name = "trail"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
opentelemetry = { version = "0.31.0", features = ["logs", "metrics", "trace"], default-features = false }

anyhow = { version = "1.0.86", features = ["std"], default-features = false, optional = true }
env_logger = { version = "0.11.5", features = ["auto-color", "humantime", "unstable-kv"], default-features = false, optional = true }
fe2o3-amqp-types = { version = "0.14.0", features = ["primitive", "messaging"], default-features = false, optional = true }
http = { version = "1.1.0", default-features = false, optional = true }
log = { version = "0.4.22", features = ["kv_std"], default-features = false, optional = true }
opentelemetry-appender-log = { version = "0.31.0", default-features = false, optional = true }
opentelemetry-otlp = { version = "0.31.0", features = ["grpc-tonic", "gzip-tonic", "logs", "metrics", "trace"], default-features = false, optional = true }
opentelemetry-semantic-conventions = { version = "0.31.0", features = ["semconv_experimental"], default-features = false, optional = true }
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio", "trace"], default-features = false, optional = true }
sentry = { version = "0.43.0", features = ["panic", "reqwest", "rustls"], default-features = false, optional = true }
sentry-log = { version = "0.43.0", default-features = false, optional = true }
tonic = { version = "0.14.0", default-features = false, optional = true }
tower-layer = { version = "0.3.3", default-features = false, optional = true }
tower-service = { version = "0.3.3", default-features = false, optional = true }

[features]

init = [
    "anyhow",
    "env_logger",
    "log",
    "opentelemetry-appender-log",
    "opentelemetry-otlp",
    "opentelemetry-semantic-conventions",
    "opentelemetry_sdk",
    "sentry",
    "sentry-log"
]

amqp = ["fe2o3-amqp-types"]

grpc = [
    "http",
    "tonic",
    "tower-layer",
    "tower-service"
]
